# Biosimulators_simularium

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE.txt  Min1-test.omex  Min1.omex  README.md  commit.sh  convert.py  ecoli_spatial_from_sedml_0.simularium  install-smoldyn-mac-intel.sh  install-smoldyn-mac-silicon.sh  install-with-smoldyn-mac-intel.sh  install-with-smoldyn-mac-silicon.sh  install.py  install.sh  mypy.ini  pyproject.toml  pytest.ini  refresh-env.sh  release.sh  requirements.txt  run-docker.sh  run-test.sh  setup.cfg  setup.py  simulation.simularium  simulation.vtp  test.sh  uninstall.sh
.github/workflows/: check_version_change.yml  ci.yml  pytest.yml
Min1-unpacked/: metadata.rdf  simulation.sedml
biosimulators_simularium/: __init__.py  __main__.py  biosimulators_warning.py  config.py  convert.py  exec.py  formats.py  generate.py  geometry.py  io.py  main.py  run.py  simulation.vtk  simulation_data.py  test.py  utils.py  validation.py  viz.ipynb  warnings.py
biosimulators_simularium/OUTPUT/: simulation-points.vtp  simulation.simularium  simulation.vtp
biosimulators_simularium/archives/: data_model.py  utils.py
biosimulators_simularium/controllers/: data_converters.py  data_model.py  db_control.py  interleave_coordinates.py
biosimulators_simularium/converters/: data_model.py  io.py  utils.py
biosimulators_simularium/data_generators/: biosimulators_data_generators.py  smoldyn_data_generators.py
biosimulators_simularium/generators/: data_model.py
biosimulators_simularium/io/: data_model.py
biosimulators_simularium/normalize/: DELETEME.py  data_model.py  normalize_smoldyn.py  smoldyn_solvers.py  stage.py  utils.py
biosimulators_simularium/stores/: data_model.py  io.py
biosimulators_simularium/tests/: __init__.py  run.py  test_biosimulators.py  (+10 more)
generated_simularium_files/: ecoli_spatial_3.simularium  ecoli_spatial_7.simularium  example_smoldyn.simularium
scripts/: clear-cache.sh  install-smoldyn-mac-intel.sh  install.sh  release.sh  run-docker.sh
(+98 files in other folders)
