[tool.poetry]
name = "biosimulators-simularium"
version = "0.5.13"
description = "Converting Biosimulators spatial simulation outputs into a Simularium-compliant format."
authors = ["Alex Patrie <alexanderpatrie@gmail.com>"]
readme = "README.md"
packages = [{include = "biosimulators_simularium"}]

[tool.poetry.dependencies]
python = ">=3.9"
zarr = "*"
simulariumio = "*"
biosimulators-utils = "*"
python-libcombine = "*"
kisao = "*"
termcolor = "*"
# pyvista = "*"
ipython = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
flake8 = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
