[tool.poetry]
name = "biosimulators-simularium"
version = "0.5.29"
description = "Converting Biosimulators spatial simulation outputs into a Simularium-compliant format."
authors = ["Alex Patrie <alexanderpatrie@gmail.com>"]
readme = "README.md"
packages = [{include = "biosimulators_simularium"}]

[tool.poetry.dependencies]
python = ">=3.7"
zarr = "*"
simulariumio = "*"
python-libcombine = "*"
kisao = "*"
termcolor = "*"
ipython = "*"
notebook = "*"
jupyter = "*"
pyvista = "*"
# biosimulators-utils = "*"
# notebook = "^7.0.6"
# jupyter = "^1.0.0"
# pyvista = "^0.43.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
flake8 = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
